# fMRI_ROI_Analysis_Tool

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  batchRunNipype.py  config.py  folder_structure.rst  printResults.py  pyproject.toml  requirements.txt  roiAnalysis.py  roiTsnrAnalysis.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: draft-pdf.yml
Further_instructions/: Virtual_environments.md
conda_env/: Readme.md  fRAT_env.yml  req.txt
data/: P4_MB4_S1P5.json
data/HarvardOxford-Cortical_ROI_report/: HarvardOxford-Cortical_P1_MB3_S2_matchBW.json  HarvardOxford-Cortical_P2_MB1_S1P5_match_BW.json  HarvardOxford-Cortical_P3_MB3_S1P5.json  HarvardOxford-Cortical_P4_MB4_S1P5.json  HarvardOxford-Cortical_P5_MB4_S2_matchBW.json  HarvardOxford-Cortical_P6_MB2_S1P5.json  combined_results.json  config_log.toml
data/QA_report/: P1_MB3_S2_matchBW_tSNR.hdr  P3_MB3_S1P5_tSNR.hdr  P3_MB3_S1P5_tSNR.img  P4_MB4_S1P5_tSNR.img  P5_MB4_S2_matchBW_tSNR.hdr  P6_MB2_S1P5_tSNR.hdr
docs/: conf.py  configuration_files.rst  folder_structure.rst  future_additions.rst  index.md  index.rst  installation.md  installation.rst  key_concepts_of_frat.rst  links.rst  requirements.txt  statement_of_need.rst  troubleshooting.rst  tutorials.rst  usage.md  usage.rst
docs/old_files/: Virtual_environments.md
docs/tutorials/: Basic-ROI-analysis.rst
example_data/: P1_MB3_S2_matchBW.json  P2_MB1_S1P5_match_BW.json  P3_MB3_S1P5.json  P5_MB4_S2_matchBW.json  P6_MB2_S1P5.json  paramValues.csv
example_data/HarvardOxford-Cortical_ROI_report/: config_log.toml  copy_paramValues.csv  index.html
example_data/QA_report/: P1_MB3_S2_matchBW_tSNR.img  P2_MB1_S1P5_match_BW_tSNR.hdr  P2_MB1_S1P5_match_BW_tSNR.img  P4_MB4_S1P5_tSNR.hdr  P5_MB4_S2_matchBW_tSNR.img  P6_MB2_S1P5_tSNR.img
example_data/anat/: CS_MPRAGE.json
fRAT/: __main__.py  _version.py  batchRunNipype.py  config.toml  dash_report.py  fRAT.py  fRAT_GUI.py  fRAT_config.toml  nogui.py  printResults.py  statmap.py  statmap_config.toml
fRAT/HOUSE/: __init__.py  add_motion.py  add_noise.py  handler.py  separate_noise_volumes.py
fRAT/configuration_profiles/: latest_settings.toml
fRAT/utils/: __init__.py  analysis.py  bootstrap.css  config_setup.py  create_dash_table.py  create_html_report.py  dash_report.py  figures.py  (+11 more)
paper/: paper.bib  paper.md
roianalysis/: analysis.py  config.py  figures.py  main.py  paramparser.py  utils.py
(+112 files in other folders)
