[tool.poetry]
name = "frat-brain"
version = "1.3.0"
description = "Application for ROI fMRI data analysis."
authors = ["Elliot Howley <elliohow@hotmail.com>"]
readme = "README.md"
homepage = "https://fmri-roi-analysis-tool.readthedocs.io/en/latest/"
repository = "https://github.com/elliohow/fMRI_ROI_Analysis_Tool"
packages = [{include = "fRAT"}]

[tool.poetry.scripts]
fRAT = 'fRAT.__main__:start_gui'

[tool.poetry.dependencies]
python = "~3.10"
altgraph = "0.17.2"
bootstrapped = "0.0.2"
brotli = "1.0.9"
certifi = "2022.12.7"
chardet = "3.0.4"
charset-normalizer = "2.0.12"
ci-info = "0.2.0"
click = "7.1.1"
contourpy = "1.0.7"
cycler = "0.10.0"
cython = "0.29.21"
dash = "1.19.0"
dash-core-components = "1.15.0"
dash-html-components = "1.1.2"
dash-renderer = "1.9.0"
dash-table = "4.11.2"
dataclasses = "0.6"
decorator = "4.4.2"
descartes = "1.1.0"
dill = "0.3.6"
dominate = "2.6.0"
etelemetry = "0.2.2"
filelock = "3.0.12"
flask = "1.1.2"
flask-compress = "1.8.0"
fonttools = "4.38.0"
fslpy = "3.4.0"
funcsigs = "1.0.2"
future = "0.18.2"
gevent = "22.10.2"
greenlet = "2.0.2"
h5py = "3.8.0"
idna = "2.9"
imageio = "2.9.0"
isodate = "0.6.0"
itsdangerous = "1.1.0"
jinja2 = "2.11.3"
joblib = "1.2.0"
kiwisolver = "1.4.4"
looseversion = "1.0.1"
lxml = "4.9.2"
macholib = "1.15.2"
markupsafe = "1.1.1"
matplotlib = "3.6.3"
mizani = "0.8.1"
multiprocess = "0.70.14"
networkx = "2.4"
neurdflib = "5.0.1"
nibabel = "3.2.1"
nilearn = "0.9.0"
nipype = "1.8.4"
numpy = "1.22.3"
packaging = "23.0"
palettable = "3.3.0"
pandas = "1.5.3"
pathos = "0.2.6"
patsy = "0.5.3"
pillow = "9.3.0"
pip-autoremove = "0.10.0"
plotly = "4.14.3"
plotnine = "0.10.1"
pox = "0.2.8"
ppft = "1.6.6.2"
prov = "1.5.3"
pydot = "1.4.1"
pydotplus = "2.0.2"
pyinstaller = "4.9"
pyinstaller-hooks-contrib = "2022.2"
pyparsing = "2.4.6"
python-dateutil = "2.8.1"
pytz = "2022.7.1"
pywavelets = "1.4.1"
rdflib = "5.0.0"
requests = "2.27.1"
retrying = "1.3.3"
scikit-image = "0.19.3"
scikit-learn = "1.2.1"
scipy = "1.10.0"
simplejson = "3.17.0"
six = "1.14.0"
sklearn = "0.0"
statsmodels = "0.13.5"
tabulate = "0.8.9"
tenacity = "8.2.0"
threadpoolctl = "2.1.0"
tifffile = "2021.7.30"
toml = "0.10.2"
traits = "6.3.2"
urllib3 = "1.26.5"
werkzeug = "1.0.1"
xlrd = "1.2.0"
xmltodict = "0.12.0"
zope-event = "4.5.0"
zope-interface = "5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
